deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: hello
  name: hello-service
spec:
  replicas: 1
  selector:
    app: hello-service
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      maxSurge: "20%"
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: default
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_ID
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        image: 172.30.1.1:5000/myproject/hello-service-is:initial
        imagePullPolicy: Always
        name: hello-service
        ports:
          - containerPort: 8080
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 20
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 20
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 1.2Gi
