service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello
spec:
  selector:
    app: hello-service
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
