route.yaml
apiVersion: v1
kind: Route
metadata:
  name: hello-service
  labels:
    app: hello
spec:
  to:
    kind: Service
    name: hello-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
